# leaders

./: Makefile  Makefile.am  Makefile.in  abs.c  abs.h  affichage.c  affichage.h  affichage2.c  affichage2.h  affichage3.c  affichage3.h  callbacks.c  callbacks.h  capteur.c  capteur.h  client.c  client.h  equipement.c  equipement.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  projetc  sauv.txt  troupeau.c  troupeau.h
